# openclaw-sysadmin-agent

./: .env.example  .gitignore  AGENTS.md  BOOT.md  CLAUDE.md  HEARTBEAT.md  IDENTITY.md  PROTOCOL.md  README.md  SOUL.md  TOOLS.md  docker-compose.yml  pyproject.toml
.github/workflows/: docs.yml  security-audit.yml  validate.yml
iamq/: .formatter.exs  .gitignore  Dockerfile  mix.exs
iamq/lib/iamq_sidecar/: application.ex  mq_client.ex  mq_ws_client.ex
scripts/: archive.py  close-tabs.sh  install-watchdog.sh  security-audit.sh  watchdog.sh
scripts/templates/: watchdog.plist.template
spec/: API.md  ARCHITECTURE.md  COMMUNICATION.md  CRON.md  PIPELINES.md  SAFETY.md  TESTING.md
specs/: ARCHITECTURE.md  LEARNINGS.md  TROUBLESHOOTING.md
tests/: test_archive.py  test_iamq.py  test_iamq_extended.py  test_pipeline_cli.py  test_pipeline_docs.py  test_pipeline_iamq.py  test_pipeline_security.py  test_pipeline_validate.py  test_runner.py  test_security_audit.py
tools/: __init__.py  archive.py  iamq.py  security_audit.py
tools/pipeline_runner/: __init__.py  __main__.py  cli.py  runner.py
tools/pipeline_runner/pipelines/: __init__.py  docs.py  iamq.py  security.py  validate.py
watchdog/: Dockerfile  docker-compose.yml  watchdog.sh
